deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: nginx
  name: nginx
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
     run: nginx
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
   metadata:
    labels: 
     run: nginx
   spec:
     containers:
     - image: nginx
       imagePullPolicy: Always 
       name: nginx
