ingress.yml
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: nginx-ingress
    namespace: default
  spec:
    rules:
      http:
        paths:
         - path: /docs
           backend:
            serviceName: nginx
            servicePort: 80
